# cpp_tutorials

#example/QrCodeScanner/: gradle.properties
#example/QrCodeScanner/app/: build.gradle
#example/QrCodeScanner/app/src/main/: AndroidManifest.xml
#example/QrCodeScanner/app/src/main/java/com/duoyi/provider/qrscan/camera/: CameraConfigurationManager.java
#example/android-ndk/hello-libs/: gradle.properties
#example/android-ndk/hello-libs/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
#example/android-ndk/hello-libs/gen-libs/: build.gradle
#example/android-ndk/hello-neon/app/: build.gradle
#example/android-ndk/hello-neon/gradle/wrapper/: gradle-wrapper.properties
#example/fresco/: gradle.properties
01.base/: HelloWorld.cpp
01.base/bsdiff/: .gitignore  CMakeLists.txt  bsdiff.c  bsdiff.h  bspatch.c  bspatch.h  main.c
01.base/define/: CMakeLists.txt  main.c
01.base/helloworld/: .gitignore  CMakeLists.txt  hello.c  hello.h  lib1.c  lib1.h  main.cpp
01.base/io/: CMakeLists.txt  main.c
01.base/malloc/: CMakeLists.txt  main.c
01.base/pointer/: .gitignore  CMakeLists.txt  main.cpp
01.base/struct/: main.c
02.cpp/extend/: CMakeLists.txt  main.cpp
02.cpp/helloWorld/: .gitignore  CMakeLists.txt  Plane.cpp  Plane.h  main.cpp
02.cpp/multiExtend/: .gitignore  CMakeLists.txt  main.cpp
02.cpp/override_operation/: CMakeLists.txt  main.cpp
02.cpp/tmplate/: CMakeLists.txt  main.cpp
02.cpp/virtual/: CMakeLists.txt  main.cpp
04.jni/JniDemo/: gradle.properties
04.jni/JniDemo/app/: CMakeLists.txt  build.gradle
04.jni/JniDemo/app/src/androidTest/java/org/huihui/jnidemo/: ExampleInstrumentedTest.java
04.jni/JniDemo/app/src/main/: AndroidManifest.xml
04.jni/JniDemo/app/src/main/cpp/: jni_map.cpp  native-lib.cpp
04.jni/JniDemo/app/src/main/java/org/huihui/jnidemo/: JniDemo.java  JniMap.java  MainActivity.java
04.jni/JniDemo/app/src/main/res/layout/: activity_main.xml
04.jni/JniDemo/app/src/test/java/org/huihui/jnidemo/: ExampleUnitTest.java
04.jni/JniDemo/gradle/wrapper/: gradle-wrapper.properties
04.jni/PThread/: gradle.properties
04.jni/PThread/app/: CMakeLists.txt  build.gradle
04.jni/PThread/app/src/androidTest/java/org/huihui/pthread/: ExampleInstrumentedTest.java
04.jni/PThread/app/src/main/: AndroidManifest.xml
04.jni/PThread/app/src/main/cpp/: audio.c  common.c  common.h  metadata.c  native-lib.cpp  player.c  rtsp.c  shairport.c
04.jni/PThread/app/src/main/java/org/huihui/pthread/: BootBroadCastReciever.java  MainActivity.java  PthreadApplication.java
04.jni/PThread/app/src/main/res/layout/: activity_main.xml
04.jni/PThread/app/src/main/res/values/: strings.xml
04.jni/PThread/app/src/test/java/org/huihui/pthread/: ExampleUnitTest.java
04.jni/PThread/gradle/wrapper/: gradle-wrapper.properties
04.jni/airplay/: gradle.properties  settings.gradle
04.jni/airplay/app/: CMakeLists.txt  build.gradle
04.jni/airplay/app/src/androidTest/java/org/huihui/airplay/: ExampleInstrumentedTest.java
04.jni/airplay/app/src/main/: AndroidManifest.xml
04.jni/airplay/app/src/main/cpp/: airplay.cpp  native-lib.cpp
04.jni/airplay/app/src/main/java/org/huihui/airplay/: AirPlay.java  MDNS.java  MainActivity.java  MainActivity.kt  NetworkUtils.java
04.jni/airplay/app/src/main/res/layout/: activity_main.xml
04.jni/airplay/app/src/test/java/org/huihui/airplay/: ExampleUnitTest.java
04.jni/airplay/gradle/wrapper/: gradle-wrapper.properties
04.jni/airplay/threads/: build.gradle
05.qrcode/EazyZbar/: gradle.properties
05.qrcode/EazyZbar/app/: CMakeLists.txt  build.gradle
05.qrcode/EazyZbar/app/src/androidTest/java/org/huihui/eazyzbar/: ExampleInstrumentedTest.java
05.qrcode/EazyZbar/app/src/main/: AndroidManifest.xml
05.qrcode/EazyZbar/app/src/main/cpp/: native-lib.cpp
05.qrcode/EazyZbar/app/src/main/cpp/include/: iconv.h
05.qrcode/EazyZbar/app/src/main/cpp/libiconv-1.15/lib/: iconv.c  relocatable.c
05.qrcode/EazyZbar/app/src/main/cpp/libiconv-1.15/libcharset/lib/: localcharset.c
05.qrcode/EazyZbar/app/src/main/cpp/zbar/: timer.h
05.qrcode/EazyZbar/app/src/main/cpp/zbar/decoder/: codabar.c  databar.c  i25.c
05.qrcode/EazyZbar/app/src/main/cpp/zbar/qrcode/: qrdec.c  qrdectxt.c
05.qrcode/EazyZbar/app/src/main/java/org/huihui/eazyzbar/: CamParaUtil.java  CameraInterface.java  CameraPreview.java  CameraSurfaceView.java  CameraTestActivity.java  CameraView.java  DecoderHander.java  IScanView.java  MainActivity.java  ScanLayout.java  ScanView.java
05.qrcode/EazyZbar/app/src/main/res/layout/: activity_main.xml
05.qrcode/EazyZbar/app/src/main/res/values/: strings.xml
05.qrcode/EazyZbar/app/src/test/java/org/huihui/eazyzbar/: ExampleUnitTest.java
05.qrcode/EazyZbar/gradle/wrapper/: gradle-wrapper.properties
05.qrcode/ZBar/examples/: UpgradeLog.htm  scan_image.vcxproj  scan_image.vcxproj.filters
05.qrcode/Zbar_cmake/: CMakeLists.txt  main.c  scan_image.c
05.qrcode/Zbar_cmake/libpng/: pngtest.c
05.qrcode/Zbar_cmake/zbar/decoder/: code128.c  code39.c  code93.c  ean.c  qr_finder.c
05.qrcode/android-zbar-sdk/: gradle.properties
05.qrcode/android-zbar-sdk/camera/src/main/java/com/yanzhenjie/zbar/camera/: CameraPreview.java  CameraScanAnalysis.java
05.qrcode/android-zbar-sdk/sample/: build.gradle
05.qrcode/lpng1258/: INSTALL  configure
05.qrcode/lpng1258/projects/visualc71/: UpgradeLog.htm  libpng.vcxproj  libpng.vcxproj.filters  pngtest.vcxproj.filters  zlib.vcxproj  zlib.vcxproj.filters
06.ucosii/: CMakeLists.txt  main.c
06.ucosii/CONFIG/: includes.h
06.ucosii/PORT/: os_trace.c
06.ucosii/user/: usercode.c  usercode.h
